--- a/main.css
+++ b/main.css
@@ -2,7 +2,6 @@ body{
     background-color: #f0f0f0;
     font-family:sans-serif;
     margin: 0;
-    max-width: auto;
 }
 
 header{
@@ -234,8 +233,20 @@ main{
 
 .reg{
     margin-top: 100px;
+    margin-bottom: 80px;
 }
 
 .reg_T{
     font-size: 20px;
+}
+footer{
+    background-color:rgb(209, 209, 209) ;
+    margin-bottom: 0px;
+    padding-bottom: 0;
+    padding-top: 200px;
+    border-top: 2px solid black;
+}
+.footer__container{
+    display: flex;
+    justify-content: space-between;
 }
