--- a/main.css
+++ b/main.css
@@ -243,10 +243,16 @@ footer{
     background-color:rgb(209, 209, 209) ;
     margin-bottom: 0px;
     padding-bottom: 0;
-    padding-top: 200px;
+    padding-top: 100px;
     border-top: 2px solid black;
+    border-radius: 50px 50px 0 0;
 }
-.footer__container{
+.footer__text{
     display: flex;
     justify-content: space-between;
+    padding: 20px;
 }
+.footer__img{
+    padding-left: 20px;
+}
+
