добавил иконки подвалу

--- a/main.css
+++ b/main.css
@@ -254,5 +254,11 @@ footer{
 }
 .footer__img{
     padding-left: 20px;
+    display: flex;
+    justify-content: space-between;
+    padding-right: 20px;
+}
+.grup{
+    width: 100px;
 }
 
